[package]
name = "changing_outfit"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.0"
the_csk_collection_api = { git = "https://github.com/Coolsonickirby/the_csk_collection_api.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/hdr-development/smashline.git" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
lazy_static = "1.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
